# ntex-rest-api-example

./: Cargo.toml  Dockerfile  readme.md
src/: error.rs  main.rs
src/models/: todo.rs
src/services/: mod.rs  openapi.rs  todo.rs
